app/assets/stylesheets/search.scss
.search-wrap {
  width: 100%;
  min-width: 1200px;
  margin: auto;
  display: flex;
  //左邊的部分
  .search-bar {
    width: 20%;
    height: 100vh;
    padding: 0 20px;
    border-right: 1px solid #ddd;
    .bar-form {
      padding: 0;
    }
    .search-bar-size,
    .search-pet,
    .city-group {
      display: flex;
      margin: 10px;
    }
    p {
      margin: 0 5px;
    }
  }
  //中間的部分
  .search-sitters {
    width: 40%;
    height: 100vh;
    border-right: 1px solid #ddd;
    display: flex;
    flex-wrap: wrap;
    align-content: flex-start;
    overflow: scroll;

    .sitter-item {
      width: 100%;
      height: 100px;
      border-bottom: 1px solid #ddd;
      overflow: hidden;
      display: flex;
      align-items: center;

      .item-pic {
        width: 20%;
        padding: 5px;
        img {
          width: 100%;
        }
      }
      .item-sitter-info {
        .item-sitter-slogan {
          overflow: hidden;
          display: -webkit-box;
          -webkit-box-orient: vertical;
          -webkit-line-clamp: 1;
        }
        width: 60%;
        div {
          margin: 5px 0;
        }
      }
      .item-price {
        text-align: center;
        width: 20%;
        padding: 5px;
        p {
          margin: 5px 0;
        }
        a {
          display: inline-block;
          padding: 10px;
          margin: 5px;
          text-decoration: none;
          border-radius: 14px;
          background-color: red;
          color: white;
        }
      } //item-price
    } //sitter-item
    //kaminari
    .pagination {
      // width: 100%;
      text-align: center;
      position: relative;
    }
  } //search-sitters

  //kaminari
  .pagination {
    width: 100%;
    text-align: center;
    position: relative;
  }
  //google map
  .search-map {
    width: 40%;
    height: 100vh;
    // outline: 1px solid #ddd;

    #map {
      width: 100%;
      height: 100%;
    }
  }
}

